Poprawka IngredientHistoryController